Réaliser le filtre des travaux

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -52,6 +52,9 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
+        <div class="filters">
+          <ul></ul>
+        </div>
         <div class="gallery"></div>
       </section>
       <section id="contact">
