--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -15,7 +15,17 @@
     <script src="login.js" type="module"></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+      <nav>
+        <ul>
+          <li><a href="index.html#portfolio">projets</a></li>
+          <li><a href="index.html#contact">contact</a></li>
+          <li><a href="login.html">login</a></li>
+          <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <section id="login">
         <h2>Login</h2>
