Ajouter CSS pour la page d'accueil et la page login. Ajouter mise en forme conditionnelle pour les filtres

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -46,7 +46,8 @@
             required
             value="S0phie"
           />
-          <input type="submit" value="Envoyer" />
+          <input type="submit" value="Se connecter" />
+          <a href="#" class="link">Mot de passe oublié</a>
         </form>
       </section>
     </main>
