--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,13 +15,14 @@
     <script src="index.js" type="module"></script>
   </head>
   <body>
+    <div id="topbar" class="hidden">Mode édition</div>
     <header>
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
           <li><a href="#portfolio">projets</a></li>
           <li><a href="#contact">contact</a></li>
-          <li><a href="login.html">login</a></li>
+          <li><a href="login.html" class="login-link">login</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
