Créer première version de la première fenêtre de la modale. Implémenter l'ouverture, le chargements des données et la fermeture

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -100,6 +100,18 @@
           </ul>
         </nav>
       </footer>
+      <aside class="backdrop hidden">
+        <div class="modal">
+          <div class="modal-topbar">
+            <button class="modal-close">&times</button>
+          </div>
+          <form class="modal-form">
+            <h3 class="modal-title">Galerie photo</h3>
+            <ul class="modal-image-list gallery"></ul>
+            <button class="modal-button">Ajouter une photo</button>
+          </form>
+        </div>
+      </aside>
     </div>
   </body>
 </html>
