--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -103,12 +103,24 @@
       <aside class="backdrop hidden">
         <div class="modal">
           <div class="modal-topbar">
-            <button class="modal-close">&times</button>
+            <button class="modal-close">
+              <i class="fa-solid fa-xmark"></i>
+            </button>
           </div>
           <form class="modal-form">
             <h3 class="modal-title">Galerie photo</h3>
             <ul class="modal-image-list gallery"></ul>
-            <button class="modal-button">Ajouter une photo</button>
+            <div class="fields-container hidden">
+              <label for="title">Titre</label>
+              <input type="text" name="title" id="title" />
+              <label for="category">Catégorie</label>
+              <select name="category" id="category">
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Option 3</option>
+              </select>
+            </div>
+            <input type="submit" class="button-add" value="Ajouter une photo" />
           </form>
         </div>
       </aside>
