--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;700;800&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
     <link
@@ -111,13 +111,19 @@
             <h3 class="modal-title">Galerie photo</h3>
             <ul class="modal-image-list gallery"></ul>
             <div class="fields-container hidden">
+              <div class="upload-container">
+                <div class="icon-wrapper">
+                  <i class="fa-regular fa-image"></i>
+                </div>
+                <label for="file">&plus; Ajouter photo</label>
+                <input type="file" accept=".png,.jpg" id="file" />
+                <p>jpg, png : 4mo max</p>
+              </div>
               <label for="title">Titre</label>
               <input type="text" name="title" id="title" />
               <label for="category">Catégorie</label>
               <select name="category" id="category">
-                <option>Option 1</option>
-                <option>Option 2</option>
-                <option>Option 3</option>
+                <option value="">-- Choisissez une catégorie --</option>
               </select>
             </div>
             <input type="submit" class="button-add" value="Ajouter une photo" />
