Refactoring fonctions 'addHandler' : les placer dans les fonctions 'init'

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -32,7 +32,10 @@
           <ul>
             <li><a href="#portfolio">projets</a></li>
             <li><a href="#contact">contact</a></li>
-            <li><a href="login.html" class="login-link">login</a></li>
+            <li>
+              <a href="login.html" class="login-link">login</a>
+              <a href="index.html" class="logout-link hidden">logout</a>
+            </li>
             <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
           </ul>
         </nav>
