Refactoring de la fonction getFilteredProjects. Ajouter CSS

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -15,7 +15,7 @@
     <script src="login.js" type="module"></script>
   </head>
   <body>
-    <div class="main-container">
+    <div class="main-container login-container">
       <header>
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
@@ -53,6 +53,13 @@
           </form>
         </section>
       </main>
+      <footer>
+        <nav>
+          <ul>
+            <li>Mentions Légales</li>
+          </ul>
+        </nav>
+      </footer>
     </div>
   </body>
 </html>
