--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -138,7 +138,12 @@
               </select>
             </div>
             <button type="button" class="button-next">Ajouter une photo</button>
-            <input type="submit" class="button-add hidden" value="Valider" />
+            <input
+              type="submit"
+              class="button-add hidden"
+              value="Valider"
+              disabled
+            />
           </form>
         </div>
       </aside>
