--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -29,7 +29,7 @@
       </header>
       <main>
         <section id="login">
-          <h2>Login</h2>
+          <h2>Log In</h2>
           <form action="#" method="post">
             <label for="email">Email</label>
             <input
