--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -27,7 +27,9 @@
     </div>
     <div class="main-container">
       <header>
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <a href="index.html">
+          <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        </a>
         <nav>
           <ul>
             <li><a href="#portfolio">projets</a></li>
@@ -143,13 +145,56 @@
                   <p>jpg, png : 4mo max</p>
                 </div>
                 <div class="img-wrapper"></div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="feather feather-check"
+                >
+                  <polyline points="20 6 9 17 4 12" />
+                </svg>
               </div>
               <label for="title">Titre</label>
-              <input type="text" name="title" id="title" class="field" />
+              <div class="input-container">
+                <input
+                  type="text"
+                  name="title"
+                  id="title"
+                  class="field input-title"
+                />
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="feather feather-check"
+                >
+                  <polyline points="20 6 9 17 4 12" />
+                </svg>
+              </div>
               <label for="category">Catégorie</label>
-              <select name="category" id="category" class="field">
-                <option value="">-- Choisissez une catégorie --</option>
-              </select>
+              <div class="input-container">
+                <select
+                  name="category"
+                  id="category"
+                  class="field select-category"
+                >
+                  <option value="">-- Choisissez une catégorie --</option>
+                </select>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="feather feather-check"
+                >
+                  <polyline points="20 6 9 17 4 12" />
+                </svg>
+              </div>
             </div>
             <button type="button" class="button-next">Ajouter une photo</button>
             <input
