--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -17,7 +17,9 @@
   <body>
     <div class="main-container login-container">
       <header>
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <a href="index.html">
+          <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        </a>
         <nav>
           <ul>
             <li><a href="index.html#portfolio">projets</a></li>
