Refactoring : déplacer des méthodes vers le controller

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -141,6 +141,7 @@
                     accept=".png, .jpg, .jpeg"
                     id="file"
                     class="field"
+                    required
                   />
                   <p>jpg, png : 4mo max</p>
                 </div>
@@ -148,9 +149,6 @@
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
                   class="feather feather-check"
                 >
                   <polyline points="20 6 9 17 4 12" />
@@ -163,13 +161,11 @@
                   name="title"
                   id="title"
                   class="field input-title"
+                  required
                 />
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
                   class="feather feather-check"
                 >
                   <polyline points="20 6 9 17 4 12" />
@@ -181,15 +177,13 @@
                   name="category"
                   id="category"
                   class="field select-category"
+                  required
                 >
                   <option value="">-- Choisissez une catégorie --</option>
                 </select>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
                   class="feather feather-check"
                 >
                   <polyline points="20 6 9 17 4 12" />
