--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -50,7 +50,7 @@
               name="email"
               id="email"
               required
-              value="sophie.bluel@test.tld"
+              placeholder="sophie.bluel@test.tld"
             />
             <label for="password">Mot de passe</label>
             <input
@@ -58,7 +58,7 @@
               name="password"
               id="password"
               required
-              value="S0phie"
+              placeholder="S0phie"
             />
             <p class="error-message"></p>
             <input type="submit" value="Se connecter" />
