--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="index.html#portfolio">projets</a></li>
             <li><a href="index.html#contact">contact</a></li>
-            <li><a href="login.html" class="bold">login</a></li>
+            <li class="bold"><a href="login.html">login</a></li>
             <li>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
